[gd_scene load_steps=15 format=3 uid="uid://c2ktq8osijub2"]

[ext_resource type="Theme" uid="uid://mi0cw2k5bhje" path="res://resources/default_theme.tres" id="1_pw63i"]
[ext_resource type="Script" uid="uid://cpm3iqqo7lebm" path="res://scenes/main_scene.gd" id="1_w2twt"]
[ext_resource type="Script" uid="uid://btjcodvd8dcx0" path="res://src/menu_tab_bar.gd" id="3_7ykc4"]
[ext_resource type="Script" uid="uid://dajuomrgctx0w" path="res://src/buttons/clear_button.gd" id="3_c16ls"]
[ext_resource type="Script" uid="uid://cvx2uotuhbaco" path="res://src/buttons/copy_button.gd" id="4_18nlu"]
[ext_resource type="Script" uid="uid://cg34tk86h84bh" path="res://src/buttons/paste_button.gd" id="5_6wevv"]
[ext_resource type="Script" uid="uid://bmmtxw6oq3mas" path="res://src/buttons/save_button.gd" id="6_6wevv"]
[ext_resource type="Script" uid="uid://44iiuuiwrbxx" path="res://src/rank_box.gd" id="7_e1cbu"]
[ext_resource type="Script" uid="uid://bliqyflsjbkfm" path="res://src/notification_panel.gd" id="8_18nlu"]
[ext_resource type="PackedScene" uid="uid://b04e0rh25wgcs" path="res://src/draggables/hero_path_draggable.tscn" id="8_mngbo"]
[ext_resource type="PackedScene" uid="uid://kyd0io8ylhhl" path="res://src/draggables/skill_draggable.tscn" id="9_e1cbu"]
[ext_resource type="Script" uid="uid://xfbr4tvv7qkf" path="res://src/properties_label.gd" id="10_4w45t"]
[ext_resource type="Script" uid="uid://bo7er32dyytal" path="res://scenes/skills_menu.gd" id="11_mngbo"]
[ext_resource type="Script" uid="uid://b8erljir6ou1d" path="res://scenes/heroes_menu.gd" id="12_r6p65"]

[node name="MainScene" type="Control" node_paths=PackedStringArray("tab_bar", "tab_container", "heroes_table", "split_container", "rank_boxes")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pw63i")
script = ExtResource("1_w2twt")
tab_bar = NodePath("HSplitContainer/RightVBox/TabBar")
tab_container = NodePath("HSplitContainer/RightVBox/TabContainer")
heroes_table = NodePath("HSplitContainer/RightVBox/TabContainer/Heroes/ScrollContainer/HBoxContainer/HeroesGrid")
split_container = NodePath("HSplitContainer")
rank_boxes = {
1: NodePath("HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank1VBox"),
2: NodePath("HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank2VBox"),
3: NodePath("HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank3VBox"),
4: NodePath("HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank4VBox")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15835351, 0.15835351, 0.15835348, 1)

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
split_offset = 768
dragging_enabled = false
dragger_visibility = 2

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="LeftScrollContainer" type="ScrollContainer" parent="HSplitContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="LeftVBox" type="VBoxContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 40

[node name="Empty" type="Control" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox"]
layout_mode = 2

[node name="ButtonsHBox" type="HBoxContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="ClearButton" type="Button" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox" node_paths=PackedStringArray("main_scene")]
layout_mode = 2
text = "   Clear   "
script = ExtResource("3_c16ls")
main_scene = NodePath("../../../../../..")

[node name="CopyButton" type="Button" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox"]
layout_mode = 2
text = "   Copy   "
script = ExtResource("4_18nlu")

[node name="PasteButton" type="Button" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox"]
layout_mode = 2
text = "   Paste   "
script = ExtResource("5_6wevv")

[node name="SaveButton" type="Button" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox"]
layout_mode = 2
text = "   Save   "
script = ExtResource("6_6wevv")

[node name="HeroesHBox" type="HBoxContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Rank4VBox" type="VBoxContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox" node_paths=PackedStringArray("hero_path_draggable", "skills")]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("7_e1cbu")
rank = 4
hero_path_draggable = NodePath("HeroPathDraggable")
skills = [NodePath("Skills/SkillDraggable"), NodePath("Skills/SkillDraggable2"), NodePath("Skills/SkillDraggable3"), NodePath("Skills/SkillDraggable4"), NodePath("Skills/SkillDraggable5")]

[node name="HeroPathDraggable" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank4VBox" instance=ExtResource("8_mngbo")]
layout_mode = 2
is_slot = true
rank_number = 4

[node name="Skills" type="GridContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank4VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SkillDraggable" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank4VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable2" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank4VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable3" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank4VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable4" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank4VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable5" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank4VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="Rank3VBox" type="VBoxContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox" node_paths=PackedStringArray("hero_path_draggable", "skills")]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("7_e1cbu")
rank = 3
hero_path_draggable = NodePath("HeroPathDraggable")
skills = [NodePath("Skills/SkillDraggable"), NodePath("Skills/SkillDraggable2"), NodePath("Skills/SkillDraggable3"), NodePath("Skills/SkillDraggable4"), NodePath("Skills/SkillDraggable5")]

[node name="HeroPathDraggable" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank3VBox" instance=ExtResource("8_mngbo")]
layout_mode = 2
is_slot = true
rank_number = 3

[node name="Skills" type="GridContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank3VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SkillDraggable" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank3VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable2" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank3VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable3" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank3VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable4" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank3VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable5" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank3VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="Rank2VBox" type="VBoxContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox" node_paths=PackedStringArray("hero_path_draggable", "skills")]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("7_e1cbu")
rank = 2
hero_path_draggable = NodePath("HeroPathDraggable")
skills = [NodePath("Skills/SkillDraggable"), NodePath("Skills/SkillDraggable2"), NodePath("Skills/SkillDraggable3"), NodePath("Skills/SkillDraggable4"), NodePath("Skills/SkillDraggable5")]

[node name="HeroPathDraggable" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank2VBox" instance=ExtResource("8_mngbo")]
layout_mode = 2
is_slot = true
rank_number = 2

[node name="Skills" type="GridContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank2VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SkillDraggable" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank2VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable2" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank2VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable3" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank2VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable4" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank2VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable5" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank2VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="Rank1VBox" type="VBoxContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox" node_paths=PackedStringArray("hero_path_draggable", "skills")]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("7_e1cbu")
rank = 1
hero_path_draggable = NodePath("HeroPathDraggable")
skills = [NodePath("Skills/SkillDraggable"), NodePath("Skills/SkillDraggable2"), NodePath("Skills/SkillDraggable3"), NodePath("Skills/SkillDraggable4"), NodePath("Skills/SkillDraggable5")]

[node name="HeroPathDraggable" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank1VBox" instance=ExtResource("8_mngbo")]
layout_mode = 2
is_slot = true
rank_number = 1

[node name="Skills" type="GridContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank1VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SkillDraggable" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank1VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable2" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank1VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable3" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank1VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable4" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank1VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="SkillDraggable5" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HeroesHBox/Rank1VBox/Skills" instance=ExtResource("9_e1cbu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
is_slot = true

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox"]
layout_mode = 2
alignment = 1

[node name="PropertiesLabel" type="RichTextLabel" parent="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight Blight BlightBlight Blight Blight Blight[/center]"
fit_content = true
scroll_active = false
script = ExtResource("10_4w45t")

[node name="RightVBox" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="HSplitContainer/RightVBox" node_paths=PackedStringArray("tab_container")]
layout_mode = 2
current_tab = 0
tab_alignment = 1
scrolling_enabled = false
scroll_to_selected = false
select_with_rmb = true
tab_count = 4
tab_0/title = "     Heroes     "
tab_1/title = "        Skills        "
tab_2/title = "Saved Squads"
tab_3/title = "        Info        "
script = ExtResource("3_7ykc4")
tab_container = NodePath("../TabContainer")

[node name="TabContainer" type="TabContainer" parent="HSplitContainer/RightVBox"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1
current_tab = 2
tabs_visible = false

[node name="Heroes" type="MarginContainer" parent="HSplitContainer/RightVBox/TabContainer" node_paths=PackedStringArray("heroes_table")]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("12_r6p65")
heroes_table = NodePath("ScrollContainer/HBoxContainer/HeroesGrid")
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/RightVBox/TabContainer/Heroes"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/Heroes/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HeroesGrid" type="GridContainer" parent="HSplitContainer/RightVBox/TabContainer/Heroes/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 20
columns = 4

[node name="Skills" type="MarginContainer" parent="HSplitContainer/RightVBox/TabContainer" node_paths=PackedStringArray("main_scene", "no_skills_label", "rank1_grid", "rank2_grid", "rank3_grid", "rank4_grid")]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24
script = ExtResource("11_mngbo")
main_scene = NodePath("../../../..")
no_skills_label = NodePath("ScrollContainer/VBoxContainer/NoSkillsLabel")
rank1_grid = NodePath("ScrollContainer/VBoxContainer/Rank1HBox/GridContainer")
rank2_grid = NodePath("ScrollContainer/VBoxContainer/Rank2HBox/GridContainer")
rank3_grid = NodePath("ScrollContainer/VBoxContainer/Rank3HBox/GridContainer")
rank4_grid = NodePath("ScrollContainer/VBoxContainer/Rank4HBox/GridContainer")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="NoSkillsLabel" type="Label" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "No skills.
Drag & drop heroes to the slots on the left first!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Rank1HBox" type="HBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer/VBoxContainer/Rank1HBox"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[node name="Rank2HBox" type="HBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer/VBoxContainer/Rank2HBox"]
layout_mode = 2
columns = 4

[node name="Rank3HBox" type="HBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer/VBoxContainer/Rank3HBox"]
layout_mode = 2
columns = 4

[node name="Rank4HBox" type="HBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/RightVBox/TabContainer/Skills/ScrollContainer/VBoxContainer/Rank4HBox"]
layout_mode = 2
columns = 4

[node name="SavedSquads" type="MarginContainer" parent="HSplitContainer/RightVBox/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SquadBox" type="VBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer/SquadBox"]
layout_mode = 2
text = "Squad Name"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer/SquadBox"]
layout_mode = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer/SquadBox/HBoxContainer"]
custom_minimum_size = Vector2(90, 60)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer/SquadBox/HBoxContainer"]
custom_minimum_size = Vector2(90, 60)
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer/SquadBox/HBoxContainer"]
custom_minimum_size = Vector2(90, 60)
layout_mode = 2

[node name="ColorRect4" type="ColorRect" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer/SquadBox/HBoxContainer"]
custom_minimum_size = Vector2(90, 60)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer/SquadBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="InspectButton" type="Button" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer/SquadBox/HBoxContainer2"]
layout_mode = 2
text = "   Inspect   "

[node name="CopyButton" type="Button" parent="HSplitContainer/RightVBox/TabContainer/SavedSquads/ScrollContainer/VBoxContainer/SquadBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "   Copy   "

[node name="Info" type="MarginContainer" parent="HSplitContainer/RightVBox/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/RightVBox/TabContainer/Info"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/RightVBox/TabContainer/Info/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "USAGE
asdsadas
sadfasd
afadsfadf
asdfasdd





FAQ
asdsadasd
asdasdsa
asdasd





CREDITS
asdasdas
asdasdas
asdsadasd
asdasdsa



GITHUB
asdasdsadas
sadasdsad
asdsadsad
asdsadsad"

[node name="Dialogues" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)

[node name="PopupPanel" type="PopupPanel" parent="."]
transparent_bg = false
oversampling_override = 1.0
title = "Saving squad..."
initial_position = 1
size = Vector2i(360, 240)
borderless = false
always_on_top = true
transparent = false

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 356.0
offset_bottom = 236.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LineEdit" type="LineEdit" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter squad's name..."
alignment = 1
max_length = 32

[node name="Button" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "  OK  "

[node name="NotificationPanel" type="PanelContainer" parent="." node_paths=PackedStringArray("label")]
layout_mode = 1
offset_right = 75.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("8_18nlu")
label = NodePath("Label")

[node name="Label" type="Label" parent="NotificationPanel"]
layout_mode = 2
text = "  Copied!  "

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox/ClearButton" to="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox/ClearButton" method="_on_pressed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox/CopyButton" to="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox/CopyButton" method="_on_pressed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox/PasteButton" to="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox/PasteButton" method="_on_pressed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox/SaveButton" to="HSplitContainer/MarginContainer/LeftScrollContainer/LeftVBox/ButtonsHBox/SaveButton" method="_on_pressed"]
[connection signal="tab_selected" from="HSplitContainer/RightVBox/TabBar" to="HSplitContainer/RightVBox/TabBar" method="_on_tab_selected"]
[connection signal="visibility_changed" from="HSplitContainer/RightVBox/TabContainer/Skills" to="HSplitContainer/RightVBox/TabContainer/Skills" method="_on_visibility_changed"]
